Timer ID in html, css fixed. Better readable in js in place

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,11 @@ body {
     align-items: center;
 }
 
+.timer,
+#timer {
+    font-size: 1em;
+    color: rgb(211, 24, 195);
+}
 
 .correct,
 #cor-answer {
